exo: Pointer::OnSurfaceCommit() should set the last hotspot

If a call is made to wl_pointer_set_cursor() to set a new surface and
corresponding hotspot, follow shortly thereafter by a call to
wl_surface_commit() to commit changes to the surface to use as the
pointer shape, the hotspot ended up being set to an old hotspot value.

Both calls make an asynchronous call to take a snapshot of the pointer
surface, which takes the hotspot to set. The second call appears to
cause the first snapshot operation to be aborted before completing,
otherwise it would make sense to have the commit call not even set the
hotspot. Instead the call to set the cursor now store the hotspot that
would have been set, and the commit call will use that value. This does
result in the correct hotspot being set.

Bug: 759856, b:65096873
Change-Id: Iec69b0f138bb81f2da5ea9ecc2b9ff8739b02785